--- a/src/app/login/login/login.component.css
+++ b/src/app/login/login/login.component.css
@@ -84,7 +84,7 @@
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  height: 100%;
+  height: 300px;
   width: 100%;
   background-color: rgba(255, 165, 169, 0.7);
 }
