--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -60,7 +60,7 @@
         justify-content: center;
         align-items: center;
         position:absolute;
-        height:100%;
+        height:300px;
         width:100%;
         background-color: rgba(#ffa5a9,0.7);
         .user-login-form__error-message-title{
@@ -75,7 +75,6 @@
         animation-name: fadeIn, fadeOut;
         animation-delay: 0s, 1s;
       }
-      
       
       @keyframes fadeIn{
        0%{
