Preparation to heroku deploy

--- a/src/app/day-shedule/edit-event-form/edit-event-form.component.html
+++ b/src/app/day-shedule/edit-event-form/edit-event-form.component.html
@@ -78,7 +78,7 @@
         name="priority"
         value="high"
         [(ngModel)]= "priority"
-        [checked]="priority===high"
+        [checked]="priority==='high'"
         >
         
       </label>
@@ -88,7 +88,7 @@
         name="priority"
         value="normal"
         [(ngModel)]= "priority"
-        [checked]="priority===normal"
+        [checked]="priority==='normal'"
         >
       </label>
       
@@ -98,7 +98,7 @@
         name="priority"
         value="low"
         [(ngModel)]= "priority"
-        [checked]="priority===high"
+        [checked]="priority==='high'"
         >
       </label>
     </div>
